# pan25-generative-ai-authorship-verification

./: .dockerignore  Dockerfile  README.md  build-docker.sh  pyproject.toml
data/pan-task-eval-out/: eloquent-leaderboard.tex  leaderboard.html  leaderboard.tex
data/splits/: summary.txt
notebooks/: task_eval.ipynb
pan25_genai_detection/baselines/: README.md  binoculars.py  cli.py  detector_base.py  ppmd.py  tfidf.py
pan25_genai_detection/dataset/: dataset_sample.py  gnews_url.py  llm_generate.py  news_source.py  paraphrase.py  summarize.py
pan25_genai_detection/dataset/prompt_templates/: gen_essay.jinja2  gen_essay_obfs_7yo.jinja2  gen_essay_obfs_7yo_no_kp.jinja2  gen_essay_obfs_alliteration.jinja2  gen_essay_obfs_neighborhood.jinja2  gen_essay_obfs_rand_words.jinja2  gen_essay_obfs_word_order.jinja2  gen_fiction_cont.jinja2  gen_headline.jinja2  gen_news_article.jinja2  kaggle_paraphrase_text.jinja2  news_article_chat.jinja2  news_article_short_chat.jinja2  sum_essay.jinja2  sum_essay_obfs.jinja2  sum_essay_obfs_neighborhood.jinja2  sum_fiction_cont.jinja2  sum_news.jinja2
pan25_genai_detection/dataset/summary_schemas/: essay.json  essay_obfs.json  essay_obfs_neighborhood.json  fiction_cont.json  news.json
pan25_genai_detection/evaluator/: README.md  evaluator.py
scripts/: create-splits.sh  sample-dataset.sh  text-to-jsonl.sh
